[project]
name = "complianceqapipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "azure-core>=1.41.0",
    "azure-identity>=1.25.3",
    "azure-monitor-opentelemetry>=1.8.8",
    "azure-search-documents>=12.0.0",
    "azure-storage-blob>=12.30.0",
    "fastapi>=0.136.3",
    "firecrawl-py>=4.28.2",
    "langchain>=1.3.6",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "langsmith>=0.8.11",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pypdf>=6.13.1",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
    "yt-dlp>=2026.6.9",
]
